# esp_ppq_lut

./: .gitignore  README.md
prototypes/: README.md  validate_lut.py
prototypes/firmware/: .gitignore  CMakeLists.txt
prototypes/firmware/main/: CMakeLists.txt  app_main.cpp  idf_component.yml  swish_lut_test.espdl  test_data.h
prototypes/outputs/: swish_lut_test.espdl  swish_lut_test.info  swish_lut_test.json  swish_lut_test.onnx
src/: main.py
src/esp_ppq_lut/: __init__.py  emulator.py  exporter.py  passes.py  patches.py  utils.py
src/outputs/: swish_test.espdl  swish_test.info  swish_test.json  swish_test.onnx
src/outputs/lut_verification/: lut_2_test.h  mapping.json
test_yolo/: validate_best.py  yolo_test.py  yolo_test_tqt.py
test_yolo/firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults.esp32p4
test_yolo/firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
test_yolo/firmware/main/models/: yolo26n_p4.espdl
test_yolo/firmware/main/test_data/: raw_rgb_person.h
test_yolo/firmware/results/: plot_detections.py
test_yolo/output/: yolo26n_512_ideal_p4.espdl  yolo26n_512_ideal_p4.json  yolo26n_512_s8_p4.espdl  yolo26n_512_s8_p4.json
test_yolo/scripts/: trainer.py  validator.py
tests_3_layers/: common.py  run_all.py  test_sigmoid.py  test_swish.py  test_tanh.py
tests_3_layers/firmware/: CMakeLists.txt  README.md  firmware_tests_results.txt
tests_3_layers/firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
tests_3_layers/firmware/main/test_data/: sigmoid_test_p4_data.h  sigmoid_test_s3_data.h  swish_test_p4_data.h  tanh_test_p4_data.h  tanh_test_s3_data.h
tests_3_layers/outputs/p4/sigmoid_test/: sigmoid_test.espdl  sigmoid_test.info  sigmoid_test.json  sigmoid_test.onnx
tests_3_layers/outputs/p4/swish_test/: swish_test.json
tests_3_layers/outputs/p4/tanh_test/: tanh_test.espdl  tanh_test.info  tanh_test.json
tests_3_layers/outputs/s3/sigmoid_test/: sigmoid_test.espdl  sigmoid_test.info  sigmoid_test.json
tests_3_layers/outputs/s3/sigmoid_test/lut_verification/: mapping.json
tests_3_layers/outputs/s3/swish_test/: swish_test.espdl  swish_test.info  swish_test.json  swish_test.onnx
tests_3_layers/outputs/s3/swish_test/lut_verification/: mapping.json
tests_3_layers/outputs/s3/tanh_test/: tanh_test.espdl  tanh_test.info  tanh_test.json  tanh_test.onnx
tests_3_layers/outputs/s3/tanh_test/lut_verification/: mapping.json
